# darwin

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/darwin/: __init__.py  __main__.py  agent.py  causal.py  cli.py  composer.py  concepts.py  critic.py  discourse.py  embodiment.py  experiments.py  language.py  memory.py  planner.py  retrieval.py  runtime.py  self_model.py  semantics.py  storage.py  streaming.py  thought.py  types.py  world_model.py  worlds.py
tests/: test_agent.py  test_causal.py  test_language_cognition.py  test_semantics.py  test_v02.py
training_logs/: darwin_training_20260422_104604.txt  darwin_training_20260422_104604_final.json  darwin_training_process.json  darwin_training_progress.json
