[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-darwin"
version = "0.1.0"
description = "A causal-adaptive AI kernel built from interventions, consequences, memory, and planning."
requires-python = ">=3.10"
authors = [{ name = "Project Darwin" }]
dependencies = []

[project.scripts]
darwin = "darwin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

